--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,17 @@
-language: c
-script: echo "skip"
+
+language:
+  - cpp
+
+before_install:
+  - pip install --user cpp-coveralls
+
+script:
+  - qmake
+  - make
+  - ./tests/tests
+
+after_success:
+  - coveralls --root . -E ".*external.*" -E ".*tests.*"
+
+notifications:
+email: false
