--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ before_install:
   - pip install --user cpp-coveralls
 
 script:
-  - cd gtest-master/ && qmake
-  - cd gtest-master/ && make
-  - cd gtest-master/ && ./tests/tests
+  - cd ./gtest-master/ && qmake
+  - cd ./gtest-master/ && make
+  - cd ./gtest-master/ && ./tests/tests
 
 after_success:
-  - cd gtest-master/ && coveralls --root . -E ".*external.*" -E ".*tests.*"
+  - cd ./gtest-master/ && coveralls --root . -E ".*external.*" -E ".*tests.*"
 
 notifications:
 email: false
